feat: notifications added, swagger updated
