# handler/review_comment_handler.go
@@ -1,9 +1,12 @@
 package handler
 
 import (
+	"fmt"
+
 	"github.com/abinba/codereview/database"
 	"github.com/abinba/codereview/model"
 	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
 )
 
 // CreateReviewComment creates a review comment.
@@ -12,7 +15,7 @@ import (
 // @Tags Review Comments
 // @Accept json
 // @Produce json
-// @Param review_comment body ReviewComment true "Review comment information to create"
+// @Param review_comment body model.ReviewComment true "Review comment information to create"
 // @Success 201 {object} model.ReviewComment
 // @Router /api/v1/review_comment/ [post]
 func CreateReviewComment(c *fiber.Ctx) error {
@@ -29,6 +32,20 @@ func CreateReviewComment(c *fiber.Ctx) error {
 		return c.Status(500).JSON(fiber.Map{
 			"status": "error", "message": "Could not create review comment", "data": result.Error,
 		})
+	}
+
+	var codeSnippet model.CodeSnippet
+	db.Model(&model.CodeSnippet{}).Preload("CodeSnippetVersions", "code_snippet_version_id = ?", review_comment.CodeSnippetVersionID).First(&codeSnippet)
+	// TODO: use message queue and worker in the future for non-blocking.
+	if codeSnippet.UserID != nil && *codeSnippet.UserID != uuid.Nil {
+		notification := model.Notification{
+			UserID:           *codeSnippet.UserID,
+			NotificationType: "CodeReview",
+			Text:             "Your code has been reviewed! Check it out at My snippets",
+		}
+		if notifResult := db.Create(&notification); notifResult.Error != nil {
+			fmt.Println("Error creating notification")
+		}
 	}
 
 	return c.Status(201).JSON(fiber.Map{
